Fix z-index issue for charts in html blocks.

--- a/themes/colors/css/colors.css
+++ b/themes/colors/css/colors.css
@@ -1495,13 +1495,16 @@ margin: 0;
 .gedcom_favorites_block  .person_box .details2, .gedcom_favorites_block  .person_boxF.details2, .gedcom_favorites_block  .person_boxNN.details2 {min-height:40px;}
 .user_favorites_block  .person_box .details2, .user_favorites_block  .person_boxF.details2, .user_favorites_block  .person_boxNN.details2 {min-height:40px;}
 
-.user_favorites_block, .gedcom_favorites_block,
-#ancestry_chart .person_box, #ancestry_chart .person_boxF,
-#descendancy_chart .person_box, #descendancy_chart .person_boxF,
-#family-table .person_box, #family-table .person_boxF,
-#familybook_chart .person_box, #familybook_chart .person_boxF,
-#hourglass_chart .person_box, #hourglass_chart .person_boxF {
-	overflow: visible !important;
+
+.charts_block .person_box, .charts_block .person_boxF, .charts_block .person_boxNN 
+.gedcom_favorites_block,.user_favorites_block, 
+#ancestry_chart .person_box, #ancestry_chart .person_boxF, #ancestry_chart .person_boxNN,
+#descendancy_chart .person_box, #descendancy_chart .person_boxF, #descendancy_chart .person_boxNN,
+#family-table .person_box, #family-table .person_boxF, #family-table .person_boxNN,
+#familybook_chart .person_box, #familybook_chart .person_boxF, #familybook_chart .person_boxNN,
+#hourglass_chart .person_box, #hourglass_chart .person_boxF, #hourglass_chart .person_boxNN,
+#relatives_content .person_box, #relatives_content .person_boxF, #relatives_content .person_boxNN {
+overflow: visible !important;
 }
 
 #branches-page table, #medialist-page .list_table  {margin:auto;}
